objects/Integration_Configuration__mdt.object
<CustomObject>
    <fields>
        <fullName>Configuration_Description__c</fullName>
        <description>High level description of the label/ value pair</description>
        <label>Configuration Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configuration_Label__c</fullName>
        <description>Label/ Name portion of the label/ value pair</description>
        <label>Configuration Label</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configuration_Value__c</fullName>
        <description>Value of the label/ value pair</description>
        <label>Configuration Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Type__c</fullName>
        <description>Data type of the value for the label/ value pair</description>
        <label>Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Date</fullName>
                    <default>true</default>
                    <label>Date</label>
                </value>
                <value>
                    <fullName>DateTime</fullName>
                </value>
                <value>
                    <fullName>Decimal</fullName>
                </value>
                <value>
                    <fullName>Integer</fullName>
                </value>
                <value>
                    <fullName>String</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_System_Name__c</fullName>
        <description>Name selection for the external system/ platform integrated with Salesforce (Yodle SFDC)</description>
        <label>External System Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CTS</fullName>
                    <default>true</default>
                    <label>CTS</label>
                </value>
                <value>
                    <fullName>Marketo</fullName>
                </value>
                <value>
                    <fullName>Yodle Live</fullName>
                </value>
                <value>
                    <fullName>Acquisio SFDC</fullName>
                </value>
                <value>
                    <fullName>Dreamforce API</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag/ indicator signifying if the configuration setting is active or inactive; inactive configurations should not be used</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <description>Configurations and settings for various integrations between Salesforce and external systems/ platforms.</description>
    <label>Integration Configuration</label>
    <pluralLabel>Integration Configurations</pluralLabel>
</CustomObject>